--- a/info.yaml
+++ b/info.yaml
@@ -26,18 +26,18 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
+  ui[0]: "Reset"
+  ui[1]: "Key Update"
+  ui[2]: "Calculate"
+  ui[3]: "UART Rx"
   ui[4]: ""
   ui[5]: ""
   ui[6]: ""
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
+  uo[0]: "UART Tx"
+  uo[1]: "Ready"
   uo[2]: ""
   uo[3]: ""
   uo[4]: ""
